--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.3"
   },
   "scripts": {
