--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.6"
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "express-swagger-generator": "^1.1.17",
