--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "express-swagger-generator": "^1.1.17",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3"
   },
   "scripts": {
     "start": "nodemon ./index.js",
-    "test": "test"
+    "test": "mocha ./tests/**/*.spec.js"
   },
   "author": "",
   "license": "ISC"
