feature(unit tests): add unit tests for the mail helper
* add xunit, moq and runners
* set GenerateProgramFile to false, to fix issue with multiple main entry point compilation error
* extract attachment types to separate class containing mimetype and file extensions together
* enforce file data to never be null on the model
* remove redundant subject from file model

--- a/Bills/Bills/Bills.csproj
+++ b/Bills/Bills/Bills.csproj
@@ -4,10 +4,18 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Gmail.v1" Version="1.45.0.1927" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="Moq" Version="4.14.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
