--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "sinon": "^9.0.3"
   },
   "scripts": {
     "start": "nodemon ./index.js",
