docker: add an env file for the client app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
             - server
         ports:
             - "5000:5000"
+        env_file:
+            - "./client-variables.env"
